<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/iron_throne"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="80dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold"
        android:fontFamily="serif"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contrasena"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_iniciar_sesion"
        android:backgroundTint="#555555"/>

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:backgroundTint="#555555"/>

    <TextView
        android:id="@+id/tvRestablecerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvide_contrasena"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dp" />


</LinearLayout>
